--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ github:
   url:               "https://s-petit.github.io"
 author:
   name:              "Stéphane Petit"
-  email:             "stephane.petit95@gmail.com"
+  email:             "spetit@enjoycode.fr"
   twitter:           "spetit95"
   github:            "s-petit"
   linkedin:          "stéphane-petit-a61b8b99"
